[project]
name = "learning-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi[standard]>=0.135.2",
    "flask>=3.1.3",
    "mysqlclient>=2.2.8",
    "pytest>=9.0.2",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
