[project]
name = "learning-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi[standard]>=0.135.2",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mysqlclient>=2.2.8",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
